--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -27,6 +27,7 @@
                                     <table id="table"
                                         class="table table-bordered table-striped table-sm hover text-center">
                                         <thead class="thead-dark">
+                                         
                                             <th> Entrada/Salida</th>
                                             <th> Material</th>
                                             <th> Descripcion</th>
@@ -90,10 +91,11 @@
                             <table id="tableHistorial" class="table table-bordered table-striped table-sm ">
                               <thead class="thead-dark text-center">
     
+                                <th> Id</th>
                                 <th> Movimiento</th>
                                 <th> Entrego:</th>
                                 <th> Recibio:</th>
-                                <th> Solicitado Por:</th>
+                                <th> Departamento:</th>
                                 <th> Cantidad</th>
                                 <th> Fecha</th>
     
