--- a/views/static/sidebar.ejs
+++ b/views/static/sidebar.ejs
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<div class="bg-dark d-none d-lg-block" id="sidebar-wrapper">
+<div class="bg-dark d-none d-md-block" id="sidebar-wrapper">
   <!-- <div class="sidebar-heading bg-dark text-white"><span><img src="/img/icon.png" style="width: 25px" alt=""></span>
     Tristone Flowtech</div> -->
 
