--- a/views/static/sidebar.ejs
+++ b/views/static/sidebar.ejs
@@ -17,26 +17,54 @@
   <div class="list-group ">
     <ul class="list-group">
       <li class="list-group_item">
-        <a href="/login/Movimiento" class="list-group-item list-group-item-action" id="click_hide_show"><span
+        <a href="/login/Movimiento" class="list-group-item list-group-item-action" id="2"><span
           class="text-light fas "> </span><span class="text-light fas fa-exchange-alt"></span> <span
           class="text-white">Entrada / Salida</span>
       </a>
       </li>
 
       <li class="list-group_item">
-        <a href="/material" class="list-group-item list-group-item-action" id="click_hide_show"><span
+        <a href="/material" class="list-group-item list-group-item-action" id="3"><span
           class="text-light fas "> </span><span class="text-light fas fa-pen"></span> <span
           class="text-white">Materiales</span>
       </a>
       </li>
 
       <li class="list-group_item">
-        <a href="/inventario" class="list-group-item list-group-item-action" id="click_hide_show"><span
+        <a href="/inventario" class="list-group-item list-group-item-action" id="4"><span
           class="text-light fas "> </span><span class="text-light fas fa-table"></span> <span
           class="text-white">Inventario</span>
       </a>
       </li>
+
     </ul>
+
+    <ul class="list-group">
+      <li class="list-group_item">
+      <a href="#" class="list-group-item list-group-item-action bg-dark" id="click_hide_show"><span
+        class="text-light fas fa-angle-right"></span><span class="text-light fas fa-chart-line"></span> <span
+        class="text-white">Reportes</span></a>
+        <ul>
+          <a href="/reporte_entrada" class="list-group-item list-group-item-action bg-dark hide_show">
+            <span class="text-light fas fa-arrow-right"></span>
+            <span class="text-white"><span class="text-white">Entradas</span></span></a>
+        </ul>
+        <ul>
+          <a href="/reporte_salida" class="list-group-item list-group-item-action bg-dark hide_show">
+            <span class="text-light fas fa-arrow-left"></span>
+            <span class="text-white"><span class="text-white text-center">Salidas</span></span></a>
+        </ul>
+
+ 
+      </li>
+    </ul>
+
+
+
+
+
+
+
     <a href="http://10.56.99.21:9675/portal/portal-login" target="_blank"
       class="list-group-item list-group-item-action text-white list-group-ticket"><span
         class="text-white fas fa-ticket-alt"></span> Soporte</a>
