--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -17,6 +17,21 @@
                 </div>
             </div>
 
+            <div class="container">
+              <div class="row">
+                  <div class="col-5"></div>
+                  <div class="col-2 text-center mt-2 mb-2">
+  
+                      <button class="btn btn-success" id="btnExcel"><span class="fas fa-file-excel 2x"></span>
+                          Descargar Excel</button>
+                  </div>
+     
+                  <div class="col-4"></div>
+  
+              </div>
+
+          </div>
+
 
             <div class="container-fluid">
                 <div class="row">
